<resources>
    <string name="app_name">task1</string>
    <string name="title">REGISTRATION PAGE</string>
    <string name="tv_name">NAME:</string>
    <string name="tv_mail">E-MAIL:</string>
    <string name="tv_password">PASSWORD:</string>
    <string name="et_name">Enter your name</string>
    <string name="et_password">Enter your password</string>
    <string name="et_email">Enter your email id</string>
    <string name="btn">REGISTER</string>
    <string name="signin">LOG IN PAGE</string>
    <string name="sname">NAME</string>
    <string name="spassword">PASSWORD</string>
    <string name="sename">Enter your name</string>
    <string name="sepassword">Enter you password</string>
    <string name="semail">Enter your email</string>
    <string name="smail">EMAIL</string>
    <string name="home_page">ABOUT PAGE</string>
    <string name="imagedesc">TODO</string>
    <string name="image_name">SHOP BY WILL</string>
    <string name="para">Our online shopping platform is designed to provide customers with a simple, secure, and convenient shopping experience. We offer a wide range of quality products with easy navigation, detailed product information, and a smooth checkout process. Our goal is to make online shopping fast, reliable, and accessible, while ensuring customer satisfaction through timely delivery and responsive support. We continuously strive to improve our services to meet the evolving needs of our customers.</string>
</resources>